--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang=ru>
+<html lang="ru">
     <head>
-        <meta charset=utf-8>
-        <meta http-equiv=X-UA-Compatible content="IE=edge">
-        <meta name=viewport content="width=device-width,initial-scale=1">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel=icon href="favicon.ico">
         <title>books</title>
         <link href="css/app.f1bb457a.css" rel=preload as=style>
@@ -15,7 +15,7 @@
         <noscript>
             <strong>We're sorry but books doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
         </noscript>
-        <div id=app></div>
+        <div id="app"></div>
         <script src="js/chunk-vendors.e7ac5507.js"></script>
         <script src="js/app.df779070.js"></script>
     </body>
