--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="favicon.ico">
         <title>books</title>
-        <link href="css/app.3b0bf6ac.css" rel=preload as=style>
-        <link href="js/app.361df26e.js" rel=preload as=script>
-        <link href="js/chunk-vendors.e7ac5507.js" rel=preload as=script>
-        <link href="css/app.3b0bf6ac.css" rel=stylesheet>
+        <link href="css/app.3b0bf6ac.css" rel="preload" as="style">
+        <link href="js/app.361df26e.js" rel="preload" as="script">
+        <link href="js/chunk-vendors.e7ac5507.js" rel="preload" as="script">
+        <link href="css/app.3b0bf6ac.css" rel="stylesheet">
     </head>
     <body>
         <noscript>
